Adding in errorprone settings I've tried