@@ -139,28 +139,110 @@ lazy val root = (project in file("."))
         .filter(_ != "true")
         .map(_ =>
           Seq(
-//            "-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-//            "-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-//            "-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-//            "-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-//            "-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-//            "-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-//            "-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-//            "-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-//            "-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-//            "-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+           // Trying with the -J
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
 //
-//            "-processorpath error_prone_core-2.26.1-with-dependencies.jar:dataflow-errorprone-3.42.0.jar",
+//            // // Trying without the -J
+//            //            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+//            //            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+//            //            "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+//            //            "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+//            //            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+//            //            "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+//            //            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+//            //            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+//            //            "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+//            //            "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+//
+//
+//            //            // Trying as individual entries
+//            //            "--add-modules", "jdk.compiler",
+//            //            "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+//            //            "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+//            //            "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+//            //            "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+//            //            "--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+//            //            "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+//            //            "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+//            //            "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+//            //            "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+//            //            "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+
+            "-processorpath", errorproneDependencyFiles,
             // Turn off the AutoValueSubclassLeaked error since the generated
             // code contains it - we can't control that.
-//            "-Xplugin:ErrorProne -Xep:AutoValueSubclassLeaked:OFF -Xep:CanIgnoreReturnValueSuggester:OFF -XepDisableWarningsInGeneratedCode -Xep:WildcardImport:ERROR -Xep:CatchingUnchecked:ERROR -Xep:ThrowsUncheckedException:ERROR",
-//            "-Werror"
+            "-Xplugin:ErrorProne -Xep:AutoValueSubclassLeaked:OFF -Xep:CanIgnoreReturnValueSuggester:OFF -XepDisableWarningsInGeneratedCode -Xep:WildcardImport:ERROR -Xep:CatchingUnchecked:ERROR -Xep:ThrowsUncheckedException:ERROR",
+            "-Werror"
           )
         )
         .getOrElse(Seq.empty)
 
       defaultCompilerOptions ++ errorProneCompilerOptions
     },
+
+
+
+    //    // Trying to pass as flags to java
+    //    javaOptions ++= {
+    //      val defaultJavaOptions = Seq()
+    //
+    //      // Disable errorprone checking if the DISABLE_ERRORPRONE environment variable
+    //      // is set to true
+    //      val errorProneJavaOptions = Option(System.getenv("DISABLE_ERRORPRONE"))
+    //        .filter(_ != "true")
+    //        .map(_ =>
+    //          Seq(
+    //            // // Trying with the -J
+    //            //            "-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+    //            //            "-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+    //            //            "-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+    //            //            "-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+    //            //            "-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+    //            //            "-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+    //            //            "-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+    //            //            "-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+    //            //            "-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+    //            //            "-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+    //
+    //            // // Trying without the -J
+    //            //            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+    //            //            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+    //            //            "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+    //            //            "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+    //            //            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+    //            //            "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+    //            //            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+    //            //            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+    //            //            "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+    //            //            "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+    //
+    //          // // Trying as individual entries
+    //          //            "--add-modules", "jdk.compiler",
+    //          //            "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+    //          //            "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+    //          //            "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+    //          //            "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+    //          //            "--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+    //          //            "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+    //          //            "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+    //          //            "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+    //          //            "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+    //          //            "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+    //          )
+    //        )
+    //        .getOrElse(Seq.empty)
+    //
+    //      defaultJavaOptions ++ errorProneJavaOptions
+    //    },
 
     // Documented at https://github.com/sbt/zinc/blob/c18637c1b30f8ab7d1f702bb98301689ec75854b/internal/compiler-interface/src/main/contraband/incremental.contra
     // Recompile everything if >30% files have changed, to help avoid infinate
@@ -285,4 +367,22 @@ addCommandAlias(
 def generateSourcePath(scalaVersion: String): String = {
   val version = scalaVersion.split("\\.").take(2).mkString(".")
   s"target/scala-$version/src_managed/main"
+}
+
+// Building the list of errorprone files
+def errorproneDependencyFiles = {
+//  val home: String = sys.env("HOME")
+//  def file(name: String) = s"${home}/.cache/coursier/v1/https/repo1.maven.org/$name"
+
+//  val files = List(file("maven2/com/google/errorprone/error_prone_core/2.27.1/error_prone_core-2.27.1.jar"),
+//    file("maven2/org/checkerframework/dataflow-errorprone/3.42.0/dataflow-errorprone-3.42.0.jar"))
+  val files = List(
+    "error_prone_core-2.27.1-with-dependencies.jar",
+    "dataflow-errorprone-3.42.0-eisop3.jar"
+  )
+
+  val filestring = files.mkString(":")
+
+  println(s"Using errorprone libs from $filestring")
+  filestring
 }
